--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -125,38 +125,41 @@
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
+      <% @items.each do |item| %>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <%# ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓商品のインスタンス変数になにか入っている場合に中身のすべてを展開 %>
       <li class='list'>
         <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
+          <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
+          <%# <div class='sold-out'>
             <span>Sold Out!!</span>
-          </div>
+          </div> 
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "商品名" %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
+            <span><%= item.price %>円<br><%= item.burden.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
-        <% end %>
+          <% end %>
       </li>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% end %>
+      <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品のインスタンス変数になにか入っている場合に中身のすべてを展開 %>
 
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <%# 商品がある場合は表示  されないようにしましょう %>
+      <%# 商品がない場合は以下のダミー商品を表示 %>
+    <% if @items.empty? %>
+      <%# ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓商品がある場合は表示されない %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= link_to image_tag("sample.jpeg", class:"item-img"), "#" %>
@@ -174,8 +177,9 @@
         </div>
         <% end %>
       </li>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <% end %>
+      <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品がある場合は表示されない %>
+      <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品がない場合は以下のダミー商品を表示 %>
     </ul>
   </div>
   <%# /商品一覧 %>
