--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,12 +8,12 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <%# <% if @item.buyer.present? %>
       <%# <div class="sold-out">
-        <span>Sold Out!!</span>
-      </div> %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
-    </div>
+        <span>Sold Out!!</span> %>
+      <%# </div> %>
+      <%# <% end %> 
+    </div> 
     <div class="item-price-box">
       <span class="item-price">
         ¥<%= @item.price %>
@@ -32,7 +32,7 @@
     <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
 <% else %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", item_deliveries_path(@item.id), method: :get, class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 <% end %>
 <% end %>
