クレジット決済からRSpecまで

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -121,11 +121,11 @@
   <%# /FURIMAの特徴 %>
 
   <%# 商品一覧 %>
-  <div class='item-contents'>
+<div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
-      <% @items.each do |item| %>
+     <% @items.each do |item| %>
 
       <%# ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓商品のインスタンス変数になにか入っている場合に中身のすべてを展開 %>
       <li class='list'>
@@ -133,11 +133,13 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <div class='sold-out'>
+          <%# 商品が売れていればsold outを表示 %>
+          <% if item.buyer.present? %>
+          <div class='sold-out'>
             <span>Sold Out!!</span>
           </div> 
-          <%# //商品が売れていればsold outを表示しましょう %>
+         <% end %>
+          <%# 商品が売れていればsold outを表示 %>
 
         </div>
         <div class='item-info'>
