--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,15 +8,16 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image,class:"item-box-img" %>
-      <%# <% if @item.buyer.present? %>
-      <%# <div class="sold-out">
+      <% if @item.buyer.present? %>
+<%# sold outの表示　%>
+      <div class="sold-out">
         <span>Sold Out!!</span> %>
-      <%# </div> %>
-      <%# <% end %> 
-    </div> 
+      </div>
+      <% end %> 
+    </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥<%= @item.price %>
+        <%= @item.price %>
       </span>
       <span class="item-postage">
         <%= @item.burden.name %>
@@ -24,16 +25,16 @@
     </div>
 
     <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分ける %>
-    <% if user_signed_in? %>
+    <% if user_signed_in? && @item.buyer.blank? %>
     <% if current_user.id == @item.user_id %>
 
     <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
 <% else %>
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
+    <%# 商品が売れていない場合はこちらを表示 %>
     <%= link_to "購入画面に進む", item_deliveries_path(@item.id), method: :get, class:"item-red-btn"%>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
+    <%# //商品が売れていない場合はこちらを表示 %>
 <% end %>
 <% end %>
 
