--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -139,7 +139,7 @@
             <span>Sold Out!!</span>
           </div> 
          <% end %>
-          <%# 商品が売れていればsold outを表示 %>
+          <%# //商品が売れていればsold outを表示 %>
 
         </div>
         <div class='item-info'>
@@ -159,7 +159,6 @@
       <% end %>
       <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品のインスタンス変数になにか入っている場合に中身のすべてを展開 %>
 
-      <%# 商品がない場合は以下のダミー商品を表示 %>
     <% if @items.empty? %>
       <%# ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓商品がある場合は表示されない %>
       <li class='list'>
@@ -181,7 +180,6 @@
       </li>
       <% end %>
       <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品がある場合は表示されない %>
-      <%# //↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑商品がない場合は以下のダミー商品を表示 %>
     </ul>
   </div>
   <%# /商品一覧 %>
