--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -163,7 +163,7 @@
       <%# ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓商品がある場合は表示されない %>
       <li class='list'>
         <%= link_to '#' do %>
-        <%= link_to image_tag("sample.jpeg", class:"item-img"), "#" %>
+        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
             商品を出品してね！
